閉じるボタンを追加

--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
       <div class="row"></div>
       <div class="row"></div>
     </div>
-    <ul class="hamburger-menu" id="hamburger-menu">
-      <li>HOME</li>
-      <li>MENU</li>
-      <li>CONCEPT</li>
-      <li>CONTACT</li>
-      <li>ACCESS</li>
-      <li>RECRUIT</li>
-    </ul>
+    <div class="hamburger-menu" id="hamburger-menu">
+      <div class="close" id="close">
+        <span class="square_btn"></span>
+      </div>
+      <ul>
+        <li>HOME</li>
+        <li>MENU</li>
+        <li>CONCEPT</li>
+        <li>CONTACT</li>
+        <li>ACCESS</li>
+        <li>RECRUIT</li>
+      </ul>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
